<resources>
    <string name="app_name">Snow&#160;White</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="start_1">SNOW\nWHITE</string>
    <string name="start_2">APPLE\nSWEETNESS\nDETECTING</string>
    <string name="start_3">-</string>
    <string name="main_1_button">CAMERA</string>
    <string name="main_2_button">ALBUM</string>
    <string name="BACK">BACK</string>
    <string name="START">START</string>
    <string name="Select_Image">Select&#160;Image</string>
    <string name="apple_sweetness">Apple&#160;Sweetness</string>
    <string name="test_space">1.&#160;High&#160;/&#160;14.2101\n2.&#160;High&#160;/&#160;13.7994\n3.&#160;Medium&#160;/&#160;12.782\n4.&#160;Medium&#160;/&#160;12.585</string>
    <string name="SEND">SEND</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>