<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Camera"
        android:layout_width="297dp"
        android:layout_height="71dp"
        android:layout_gravity="center"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="171dp"
        android:background="@drawable/round_button"
        android:backgroundTint="#FDCDCD"
        android:text="@string/main_1_button"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#FDCDCD"
        tools:ignore="ExtraText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Album"
        android:layout_width="297dp"
        android:layout_height="71dp"
        android:layout_gravity="center"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="43dp"
        android:background="@drawable/round_button"
        android:backgroundTint="#FDCDCD"
        android:text="@string/main_2_button"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#FDCDCD"
        tools:ignore="ExtraText" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="409dp"
        android:layout_height="510dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="1dp"
        android:alpha="0.7"
        android:background="@color/pink"
        android:src="@drawable/main_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="128dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="558dp"
        android:fontFamily="@font/bellefair"
        android:text="@string/start_1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="235dp"
        android:layout_height="91dp"
        android:layout_gravity="center"
        android:layout_marginStart="88dp"
        android:layout_marginTop="183dp"
        android:layout_marginEnd="88dp"
        android:fontFamily="@font/belgrano"
        android:text="@string/start_2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>