<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:ignore="MissingClass">

        <!--Application subtitle name-->
        <TextView
            android:id="@+id/textView3"
            android:layout_width="125dp"
            android:layout_height="61dp"
            android:layout_gravity="center"
            android:fontFamily="@font/bellefair"
            android:text="@string/start_3"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="55sp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!--Application subtitle name-->
        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="114dp"
            android:layout_gravity="center"
            android:layout_marginStart="67dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="67dp"
            android:fontFamily="@font/belgrano"
            android:text="@string/start_2"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <!--Application title name-->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="33dp"
            android:fontFamily="@font/bellefair"
            android:text="@string/start_1"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="55sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Application background image-->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:src="@drawable/start_11"
            app:layout_anchor="@+id/textView"
            app:layout_anchorGravity="bottom|center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>
